[gd_scene load_steps=17 format=2]

[ext_resource path="res://World_Selection/Portal2D.tscn" type="PackedScene" id=1]
[ext_resource path="res://World_Selection/Player/PlayerMage.tscn" type="PackedScene" id=2]
[ext_resource path="res://World_Selection/Map/ChallengeMode.tscn" type="PackedScene" id=3]
[ext_resource path="res://World_Selection/Map/Assets/Wall.png" type="Texture" id=4]
[ext_resource path="res://World_Selection/Map/Assets/Crate.png" type="Texture" id=5]
[ext_resource path="res://World_Selection/Interface/Settings.png" type="Texture" id=6]
[ext_resource path="res://World_Selection/Interface/Settings.gd" type="Script" id=7]
[ext_resource path="res://World_Selection/Map/Story Mode.tscn" type="PackedScene" id=8]
[ext_resource path="res://World_Selection/Interface/Settings Page.tscn" type="PackedScene" id=9]
[ext_resource path="res://Leaderboard/Leaderboard HUD.tscn" type="PackedScene" id=10]
[ext_resource path="res://World_Selection/Map/Assets/BigGreyMap.png" type="Texture" id=11]
[ext_resource path="res://World_Selection/Map/Title.tres" type="DynamicFont" id=12]
[ext_resource path="res://World_Selection/Interface/Help.png" type="Texture" id=13]
[ext_resource path="res://World_Selection/Interface/Help.tscn" type="PackedScene" id=14]
[ext_resource path="res://splashscreen/splashscreen.tscn" type="PackedScene" id=15]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 16, 16 )

[node name="Main Page" type="Node2D"]
scale = Vector2( 6, 6 )

[node name="BigOrangeMap" type="Sprite" parent="."]
position = Vector2( 275.515, 84.6193 )
scale = Vector2( 2.18311, 0.768539 )
texture = ExtResource( 11 )

[node name="Wall" type="Sprite" parent="."]
position = Vector2( 280.498, 84.5302 )
scale = Vector2( 2.18361, 0.777108 )
texture = ExtResource( 4 )

[node name="PlayerMage" parent="." instance=ExtResource( 2 )]
position = Vector2( 184, 88 )
z_index = 1

[node name="Camera2D" type="Camera2D" parent="PlayerMage"]
current = true
smoothing_enabled = true

[node name="StaticBody2D" type="StaticBody2D" parent="."]
position = Vector2( 0, -8 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="StaticBody2D"]
position = Vector2( -0.730885, 0.755104 )
scale = Vector2( 0.547983, 0.325 )
polygon = PoolVector2Array( 0, -8, 1024, -8, 992, 16, 29.5207, 24.6154, 29.5207, 566.154, 992, 568, 992, 16, 1024, -8, 1024, 592, 0, 584 )

[node name="Crate" type="StaticBody2D" parent="."]
position = Vector2( 184, 0 )

[node name="Sprite" type="Sprite" parent="Crate"]
position = Vector2( 96, 80 )
texture = ExtResource( 5 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Crate"]
position = Vector2( 96, 80 )
shape = SubResource( 1 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]
scale = Vector2( 6, 6 )
transform = Transform2D( 6, 0, 0, 6, 0, 0 )
follow_viewport_scale = 0.001

[node name="Label" type="Label" parent="CanvasLayer"]
margin_left = 40.0
margin_top = 1.23423
margin_right = 133.168
margin_bottom = 17.8585
rect_scale = Vector2( 0.6, 0.6 )
custom_fonts/font = ExtResource( 12 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "Main Page"
align = 1
uppercase = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Settings" type="Control" parent="CanvasLayer"]
anchor_left = -0.000230163
anchor_right = -0.000230163
margin_left = 150.236
margin_top = -3.0
margin_right = 174.236
margin_bottom = 21.0
script = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}
setting_scene = ExtResource( 9 )
help_scene = ExtResource( 14 )

[node name="Settings_Button" type="Button" parent="CanvasLayer/Settings"]
margin_left = 4.0
margin_right = 21.0
margin_bottom = 20.0
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprite" type="Sprite" parent="CanvasLayer/Settings/Settings_Button"]
position = Vector2( 8.49707, 12 )
scale = Vector2( 0.03, 0.03 )
texture = ExtResource( 6 )

[node name="Help_Button" type="Button" parent="CanvasLayer/Settings"]
margin_left = -12.0
margin_right = 5.33334
margin_bottom = 20.0
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprite" type="Sprite" parent="CanvasLayer/Settings/Help_Button"]
position = Vector2( 8.49707, 12 )
scale = Vector2( 0.03, 0.03 )
texture = ExtResource( 13 )

[node name="Back_Button" type="Button" parent="CanvasLayer/Settings"]
visible = false
margin_left = -280.0
margin_top = 5.0
margin_right = -238.0
margin_bottom = 24.0
text = "Back"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Story" parent="." instance=ExtResource( 1 )]
position = Vector2( 80, 160 )
next_scene = ExtResource( 8 )

[node name="Label" type="Label" parent="Story"]
margin_left = -35.0
margin_top = 1.0
margin_right = 95.0
margin_bottom = 15.0
rect_scale = Vector2( 0.5, 0.5 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Story Mode"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Challenege" parent="." instance=ExtResource( 1 )]
position = Vector2( 176, 160 )
next_scene = ExtResource( 3 )

[node name="Label" type="Label" parent="Challenege"]
margin_left = -30.0
margin_right = 86.0
margin_bottom = 14.0
rect_scale = Vector2( 0.5, 0.5 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Challenge "
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Leaderboard" parent="." instance=ExtResource( 1 )]
position = Vector2( 280, 160 )
next_scene = ExtResource( 10 )

[node name="Label" type="Label" parent="Leaderboard"]
margin_left = -37.0
margin_right = 98.0
margin_bottom = 15.0
rect_scale = Vector2( 0.5, 0.5 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Leaderboard"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Assignment" parent="." instance=ExtResource( 1 )]
position = Vector2( 380, 160 )
next_scene = ExtResource( 15 )

[node name="Label" type="Label" parent="Assignment"]
margin_left = -37.0
margin_right = 98.0
margin_bottom = 15.0
rect_scale = Vector2( 0.5, 0.5 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Assignment"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="body_entered" from="Assignment" to="Assignment" method="_on_Assignment_body_entered"]
